--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.1.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.14
 aiosignal==1.3.2
@@ -5,48 +6,94 @@ alembic==1.15.1
 annotated-types==0.7.0
 anyio==4.9.0
 appdirs==1.4.4
+APScheduler==3.6.3
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
 asgiref==3.8.1
 asttokens==3.0.0
+astunparse==1.6.3
+async-lru==2.0.4
 attrs==25.3.0
 auth0-python==4.8.1
+autopep8==2.3.1
 azure-common==1.1.28
 azure-core==1.32.0
 azure-search-documents==11.5.2
+babel==2.16.0
 backoff==2.2.1
 bcrypt==4.3.0
 beautifulsoup4==4.13.3
+bleach==6.1.0
 blinker==1.9.0
+blis==0.7.11
+boto3==1.35.36
+botocore==1.35.36
+breadability==0.1.20
+Brotli==1.1.0
 build==1.2.2.post1
 cachetools==5.5.2
+catalogue==2.0.10
 certifi==2025.1.31
 cffi==1.17.1
+chardet==3.0.4
 charset-normalizer==3.4.1
+chevron==0.14.0
 chroma-hnswlib==0.7.6
 chromadb==0.5.23
 click==8.1.8
+cloudpathlib==0.19.0
+cloudpickle==3.0.0
 cohere==5.14.0
 colorama==0.4.6
 coloredlogs==15.0.1
+comm==0.2.2
+comtypes==1.4.7
+confection==0.1.5
+contourpy==1.3.0
+coverage==7.6.2
 crewai==0.108.0
 crewai-tools==0.38.1
 cryptography==44.0.2
+cssselect==1.2.0
+curl_cffi==0.6.4
+cycler==0.12.1
+cymem==2.0.8
 dataclasses-json==0.6.7
+debugpy==1.8.5
 decorator==5.2.1
+defusedxml==0.7.1
 Deprecated==1.2.18
 deprecation==2.1.0
+dirtyjson==1.0.8
 distro==1.9.0
 docker==7.1.0
+docopt==0.6.2
 docstring_parser==0.16
+docx==0.2.4
+duckduckgo_search==5.3.0b4
 durationpy==0.9
+ecdsa==0.19.1
 embedchain==0.1.127
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
 et_xmlfile==2.0.0
+eventkit==1.0.3
 executing==2.2.0
+faiss-cpu==1.8.0.post1
 fastapi==0.115.11
 fastavro==1.10.0
+fastjsonschema==2.20.0
+feedparser==6.0.11
 filelock==3.18.0
+finviz==1.4.6
+finvizfinance==1.1.0
 flatbuffers==25.2.10
+fonttools==4.54.1
+fqdn==1.5.1
+frozendict==2.4.4
 frozenlist==1.5.0
 fsspec==2025.3.0
+gast==0.6.0
 google-api-core==2.24.2
 google-auth==2.38.0
 google-cloud-aiplatform==1.85.0
@@ -54,18 +101,26 @@ google-cloud-bigquery==3.30.0
 google-cloud-core==2.4.3
 google-cloud-resource-manager==1.14.2
 google-cloud-storage==2.19.0
+google-cloud-texttospeech==2.17.2
+google-cloud-vision==3.7.4
 google-crc32c==1.7.0
+google-pasta==0.2.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.69.2
+googletrans==4.0.0rc1
 gptcache==0.1.44
 greenlet==3.1.1
 grpc-google-iam-v1==0.14.2
 grpcio==1.71.0
 grpcio-status==1.71.0
 grpcio-tools==1.71.0
+gTTS==2.5.3
 h11==0.14.0
 h2==4.2.0
+h5py==3.11.0
 hpack==4.1.0
+hstspreload==2024.9.1
+html5lib==1.1
 httpcore==1.0.7
 httptools==0.6.4
 httpx==0.27.2
@@ -73,16 +128,25 @@ httpx-sse==0.4.0
 huggingface-hub==0.29.3
 humanfriendly==10.0
 hyperframe==6.1.0
+ib-insync==0.9.86
+ib_async==1.0.3
+ibapi==9.81.1.post1
 idna==3.10
 importlib_metadata==8.6.1
 importlib_resources==6.5.2
+iniconfig==2.0.0
+inquirerpy==0.3.4
 instructor==1.7.7
+ipykernel==6.29.5
 ipython==9.0.2
 ipython_pygments_lexers==1.1.1
 isodate==0.7.2
+isoduration==20.11.0
 jedi==0.19.2
 Jinja2==3.1.6
 jiter==0.8.2
+jmespath==1.0.1
+joblib==1.4.2
 json5==0.10.0
 json_repair==0.40.0
 jsonpatch==1.33
@@ -91,7 +155,19 @@ jsonpointer==3.0.0
 jsonref==1.1.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.14.2
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.5
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+keras==3.5.0
+kiwisolver==1.4.7
 kubernetes==32.0.1
+kuzu==0.4.2
 lancedb==0.21.1
 langchain==0.3.21
 langchain-cohere==0.3.5
@@ -101,26 +177,72 @@ langchain-experimental==0.3.4
 langchain-mistralai==0.2.9
 langchain-openai==0.2.14
 langchain-text-splitters==0.3.7
+langchainplus-sdk==0.0.20
+langcodes==3.4.1
 langsmith==0.1.147
+language_data==1.2.0
+language_tool_python==2.8.1
+lean==1.0.209
+libclang==18.1.1
 litellm==1.60.2
+llama-cloud==0.1.2
+llama-index==0.11.2
+llama-index-agent-openai==0.3.4
+llama-index-cli==0.3.1
+llama-index-core==0.11.17
+llama-index-embeddings-openai==0.2.5
+llama-index-indices-managed-llama-cloud==0.4.0
+llama-index-legacy==0.9.48.post3
+llama-index-llms-openai==0.2.13
+llama-index-multi-modal-llms-openai==0.2.2
+llama-index-program-openai==0.2.0
+llama-index-question-gen-openai==0.2.0
+llama-index-readers-file==0.2.2
+llama-index-readers-llama-parse==0.3.0
+llama-parse==0.5.7
+lunary==1.1.5
+lxml==5.3.0
 Mako==1.3.9
+marisa-trie==1.2.0
+Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==3.26.1
+maskpass==0.3.7
+matplotlib==3.9.2
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 mem0ai==0.1.74
+mistune==3.0.2
+ml-dtypes==0.4.1
 mmh3==5.1.0
 monotonic==1.6
+motleycache==0.0.4
+motleycrew==0.2.2
+mplfinance==0.12.10b0
 mpmath==1.3.0
 multidict==6.2.0
+multitasking==0.0.11
+murmurhash==1.0.10
 mypy-extensions==1.0.0
+namex==0.0.8
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+neo4j==5.25.0
+nest-asyncio==1.6.0
 networkx==3.4.2
+nltk==3.9.1
 nodeenv==1.9.1
+notebook==7.2.2
+notebook_shim==0.2.4
+numexpr==2.10.1
 numpy==2.2.4
 oauthlib==3.2.2
 onnxruntime==1.21.0
 openai==1.68.2
+openapi-schema-pydantic==1.2.4
+opencv-python==4.10.0.84
 openpyxl==3.1.5
 opentelemetry-api==1.31.1
 opentelemetry-exporter-otlp-proto-common==1.31.1
@@ -133,88 +255,181 @@ opentelemetry-proto==1.31.1
 opentelemetry-sdk==1.31.1
 opentelemetry-semantic-conventions==0.52b1
 opentelemetry-util-http==0.52b1
+opt-einsum==3.3.0
+optree==0.12.1
 orjson==3.10.15
+outcome==1.3.0.post0
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
+pandas_ta==0.3.14b0
+pandocfilters==1.5.1
+parameterized==0.9.0
 parso==0.8.4
+passlib==1.7.4
 pdfminer.six==20231228
 pdfplumber==0.11.5
+peewee==3.17.6
+pfzy==0.3.4
+pglast==6.3
 pillow==11.1.0
+platformdirs==4.3.6
+playsound==1.3.0
+pluggy==1.5.0
 portalocker==2.10.1
 posthog==3.21.0
+preshed==3.0.9
+primp==0.6.3
+prometheus_client==0.21.0
 prompt_toolkit==3.0.50
 propcache==0.3.0
 proto-plus==1.26.1
 protobuf==5.29.4
+psutil==6.0.0
 psycopg2-binary==2.9.10
+pulsar-client==3.5.0
 pure_eval==0.2.3
 pyarrow==19.0.1
-pyasn1==0.6.1
+pyasn1==0.4.8
 pyasn1_modules==0.4.1
+PyAudio==0.2.14
+pycodestyle==2.12.1
+pycountry==24.6.1
 pycparser==2.22
 pydantic==2.10.6
 pydantic-settings==2.8.1
 pydantic_core==2.27.2
+pydub==0.25.1
+pygame==2.6.0
 Pygments==2.19.1
+pyhumps==3.8.0
 PyJWT==2.10.1
 pylance==0.24.1
+pynput==1.7.7
+pyparsing==3.1.4
 pypdf==5.4.0
+PyPDF2==3.0.1
 pypdfium2==4.30.1
 PyPika==0.48.9
+pypiwin32==223
 pyproject_hooks==1.2.0
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.2
+PyQt5_sip==12.15.0
 pyreadline3==3.5.4
 pyright==1.1.397
 pysbd==0.3.4
+PySocks==1.7.1
+pytesseract==0.3.13
+pytest==8.3.3
+pytest-cov==4.1.0
 python-dateutil==2.9.0.post0
+python-docx==1.1.2
 python-dotenv==1.0.1
+python-jose==3.4.0
+python-json-logger==2.0.7
 python-multipart==0.0.20
+python-telegram-bot==13.15
+pyttsx3==2.98
 pytube==15.0.0
 pytz==2024.2
 pyvis==0.3.2
 pywin32==310
+pywinpty==2.0.13
 PyYAML==6.0.2
+pyzmq==26.2.0
 qdrant-client==1.13.3
+quantconnect-stubs==16771
+rank-bm25==0.2.2
 referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rfc3986==1.5.0
+rfc3986-validator==0.1.1
 rich==13.9.4
 rpds-py==0.23.1
 rsa==4.9
+s3transfer==0.10.3
 schema==0.7.7
+scikit-learn==1.5.2
+scipy==1.14.1
+seaborn==0.13.2
+selenium==4.25.0
+Send2Trash==1.8.3
 setuptools==77.0.3
+sgmllib3k==1.0.0
 shapely==2.0.7
 shellingham==1.5.4
 six==1.17.0
+smart-open==7.0.4
 sniffio==1.3.1
+socksio==1.0.0
+sortedcontainers==2.4.0
+sounddevice==0.5.0
+soundfile==0.12.1
 soupsieve==2.6
+spacy==3.7.5
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+SpeechRecognition==3.10.4
 SQLAlchemy==2.0.39
+srsly==2.4.8
 stack-data==0.6.3
 starlette==0.46.1
+striprtf==0.0.26
+sumy==0.11.0
 sympy==1.13.3
 tabulate==0.9.0
 tenacity==9.0.0
+tensorboard==2.17.1
+tensorboard-data-server==0.7.2
+tensorflow==2.17.0
+tensorflow-intel==2.17.0
+termcolor==2.4.0
+terminado==0.18.1
+thinc==8.2.5
+threadpoolctl==3.5.0
 tiktoken==0.7.0
+tinycss2==1.3.0
 tokenizers==0.20.3
 tomli==2.2.1
 tomli_w==1.2.0
+tornado==6.4.1
 tqdm==4.67.1
 traitlets==5.14.3
+trio==0.26.2
+trio-websocket==0.11.1
 typer==0.15.2
+types-python-dateutil==2.9.0.20240906
 types-requests==2.32.0.20250306
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2025.1
+tzlocal==5.2
+uri-template==1.3.0
 urllib3==2.3.0
+user_agent==0.1.10
 uv==0.6.9
 uvicorn==0.34.0
+wasabi==1.1.3
 watchfiles==1.0.4
 wcwidth==0.2.13
+weasel==0.4.1
+webcolors==24.8.0
+webdriver-manager==4.0.2
+webencodings==0.5.1
 websocket-client==1.8.0
 websockets==15.0.1
+Werkzeug==3.0.4
+wheel==0.44.0
+whisper==1.1.10
+whispercpp==0.0.17
 wrapt==1.17.2
+wsproto==1.2.0
 yarl==1.18.3
+yfinance==0.2.44
 zipp==3.21.0
 zstandard==0.23.0
