--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,10 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
     "react-pdf": "^9.2.1",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
